chore: update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Binaries folder
+bin
+
 # Prerequisites
 *.d
 
@@ -50,3 +53,23 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+### VisualStudioCode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
+
+### VisualStudioCode Patch ###
+# Ignore all local history of files
+.history
+.ionide
+
