fix: memory leak

--- a/Makefile.inc
+++ b/Makefile.inc
@@ -2,7 +2,7 @@
 CC := gcc
 
 # Compiler flags
-CFLAGS := -Wall -std=c11
+CFLAGS := -Wall -std=c11 -fsanitize=address
 
 # Source files directory
 SRC_DIR := src
