--- a/src/server/Makefile.inc
+++ b/src/server/Makefile.inc
@@ -2,8 +2,8 @@
 CC := gcc
 
 # Compiler flags
-# CFLAGS := -Wall -std=c11 -pthread -D_POSIX_C_SOURCE=200809L -D_DEFAULT_SOURCE
- CFLAGS := -Wall -std=c11 -fsanitize=address
+# TODO: ELIMINATE -Wno-unused-parameter
+CFLAGS := -Wall -Wextra -Wno-unused-parameter -std=c11 -pedantic-errors -g -fsanitize=address -pthread -D_POSIX_C_SOURCE=200809L -D_DEFAULT_SOURCE
 
 # Source files directory
 SRC_DIR := src
